Upgrade to Gradle 8.0.2